--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -9,16 +9,17 @@ h1 {
     font-weight: bold;
 }
 
-body {
-    background-color: brown;
+@media screen and (max-width: 576px) {
+    .header-img img{
+        width: 100%;
+    }
+}
+.nav-links{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style: none;
+    padding: 1em;
 }
 
-    @media screen and (min-width: 576px) {
-        body {
-            background-color: blue;
-    }
-        .header-img {
-            width: 50%;
-        }
-}
 
