--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -4,6 +4,17 @@
     padding: 2em;
 }
 
+footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+footer p{
+    display: flex;
+    margin: 0;
+}
+
 h1 {
     text-align: center;
     font-weight: bold;
@@ -11,10 +22,8 @@ h1 {
     margin-top: 10px;
 }
 
-@media screen and (max-width: 576px) {
-    .header-img img{
-        width: 100%;
-    }
+.header-img img{
+    width: 100%;
 }
 
 .nav-links {
@@ -74,8 +83,15 @@ h1 {
     .header-img img {
        width: 100%;
     }
-
+    footer p {
+        position: fixed;
+        bottom: 1em;
+        left: 1em;
+    }
     #social-media-links {
+        position: fixed;
+        bottom: 1em;
+        right: 1em;
     }
 }
 
